[package]
name = "space_invaders"
version = "0.2.0"
authors = ["Swastik Acharyya <arpangreat@github.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
crossterm = "^0.17.5"
rusty_audio = "^1.1.4"
rusty_time = "^0.11.0"
